@@ -371,3 +371,9 @@ M      KmeansMex.c
 
 ------------------------------------------------------------------------
 r362 | gaser | 2010-09-07 21:59:04
+
+M       cg_vbm8_brainmask.m
+
+Modified thresholds for inital opening in cg_vbm8_brainmask.m
+------------------------------------------------------------------------
+r363 | gaser | 2010-09-07 23:50:06
